salesforce/force-app/main/default/objects/ExchangeRate__c/ExchangeRate__c.object-meta.xml
<CustomObject>
    <label>Exchange Rate</label>
    <pluralLabel>Exchange Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Exchange Rate ID</label>
        <type>AutoNumber</type>
        <displayFormat>ER-{0000}</displayFormat>
    </nameField>
</CustomObject>