salesforce/force-app/main/default/objects/ExchangeRate__c/fields/Destination_Currency__c.field-meta.xml
<CustomField>
    <fullName>Destination_Currency__c</fullName>
    <label>Destination Currency</label>
    <type>Text</type>
    <length>10</length>
</CustomField>