salesforce/force-app/main/default/objects/ExchangeRate__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>6</scale>
</CustomField>