salesforce/force-app/main/default/objects/ExchangeRate__c/fields/Source_Currency__c.field-meta.xml
<CustomField>
    <fullName>Source_Currency__c</fullName>
    <label>Source Currency</label>
    <type>Text</type>
    <length>10</length>
</CustomField>